--- a/src/app/usuario/formulario/formulario.component.html
+++ b/src/app/usuario/formulario/formulario.component.html
@@ -5,19 +5,28 @@
     <div>
       <label for="nome">Nome</label>
       <br>
-      <input type="text" formControlName="nome">
+      <input type="text" formControlName="nome" />
+      <span *ngIf="formularioUsuario.controls.nome.errors">
+          Campo obrigatório
+      </span>
     </div>
 
     <div>
       <label for="login">Login</label>
       <br>
-      <input type="text" formControlName="login">
+      <input type="text" formControlName="login" >
+      <span *ngIf="formularioUsuario.controls.login.errors">
+          Campo obrigatório
+      </span>
     </div>
 
     <div>
       <label for="senha">Senha</label>
       <br>
-      <input type="text" formControlName="senha">
+      <input type="text" formControlName="senha" >
+      <span *ngIf="formularioUsuario.controls.senha.errors">
+          Campo obrigatório - mínimo de 5 dígitos
+      </span>
     </div>
 
     <br>
@@ -27,7 +36,7 @@
         <button type="button" class="btn btn-secondary" routerLink="/usuarios/listar">Cancelar</button>
       </div>
       <div class="btn-group mb-5">
-        <button type="button submit" [disabled]="!formularioUsuario.valid" class="btn btn-secondary" >Enviar dados</button>
+        <button type="button submit" [disabled]="!formularioUsuario.valid" class="btn btn-secondary">Enviar dados</button>
       </div>
 
     </div>
